fixed padding alignment and overflow

--- a/client/css/main.less
+++ b/client/css/main.less
@@ -36,6 +36,11 @@ body {
   padding-top: 10px;
 }
 
+.list-group-item {
+  overflow: hidden;
+  padding-left: 10px;
+}
+
 .input-group input {
   width: 100%;
   height: 30px;
@@ -45,4 +50,5 @@ body {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 4px;
+  padding-left: 10px;
 }
